@@ -1,5 +1,5 @@
 	"skipjfmp" is a jfm file :  0  ->   6
-		New features in pTeX p3.8.0 / JFM 2.0:
+		New features in Community pTeX / JFM 2.0:
 		+ SKIP command in glue_kern
 	checksum		= 00000000
 	design size		= 10485760 2^{-20} points = 10 points
