@@ -1,5 +1,5 @@
 	"uparse" is a jfm file :  0  ->   6
-		New features in pTeX p3.8.0 / JFM 2.0:
+		New features in Community pTeX / JFM 2.0:
 		+ 3-byte kanji code
 	checksum		= 00000000
 	design size		= 10485760 2^{-20} points = 10 points
